Recess compile default set to true. Added filters to add IE8 Gradient background colors. Fixed an alignment issue in IE8. Shrank the icons a bit since it looks nicer. Removed some unnecessary specificity. Concentrated and removed some styles.

--- a/assets/less/imports/controlbar.less
+++ b/assets/less/imports/controlbar.less
@@ -16,6 +16,9 @@
 	
 	border: @def-border;
 	border-radius: @ui-corner-round;
+
+	filter: @def-ie8-background-filter;
+	
 	box-sizing: content-box;
 	
 	-webkit-transition:opacity .25s background .25s visibility .25s;
@@ -40,8 +43,9 @@ display:table-cell;
 	line-height: @controlbar-height;
 }
 
-.jwplayer .jw-controls .jw-icon button {
-	color: @inactive-color;
+.jwplayer .jw-controlbar .jw-icon button {
+	height: 100%;
+	font-size: @controlbar-icon-size;
 }
 
 .jw-controlbar span, .jw-controlbar .jw-group button, .jw-controlbar .jw-left {
