--- a/assets/less/imports/display.less
+++ b/assets/less/imports/display.less
@@ -34,11 +34,14 @@
 	background: @def-transparent-background-style;
 	background-size: @def-background-size;
 	border-radius: @ui-corner-round;
+
+	filter: @def-ie8-background-filter;
 }
 
 .jwplayer:hover .jw-display-icon {
 	background: @def-background-style;
-	background-size: @def-background-size
+	background-size: @def-background-size;
+	filter: @def-ie8-background-filter;
 }
 
 .jwplayer .jw-display-icon div {
