--- a/assets/less/imports/slider.less
+++ b/assets/less/imports/slider.less
@@ -118,7 +118,3 @@
 	left:0;
 	width: 100%;
 }
-
-.jw-slider.jw-hori button {
-	margin-right: 1em;
-}
