--- a/assets/less/imports/tooltip.less
+++ b/assets/less/imports/tooltip.less
@@ -21,6 +21,7 @@
 		background-size: @def-background-size;
 		border-radius: 0.25em;
 		opacity:0;
+		filter: @def-ie8-background-filter;
 		visibility:hidden;
 		-webkit-transition:opacity .25s visibility .25s;
 		transition:opacity .25s visibility .25s;
