--- a/assets/less/imports/vars.less
+++ b/assets/less/imports/vars.less
@@ -27,8 +27,10 @@
 @def-border: 1px solid black;
 //@def-background-style: rgba(128,0,128, 0.9);
 
+@def-ie8-background-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de49494b', endColorstr='#de343437',GradientType=0 );
+
 @controlbar-height: 2em;
-@controlbar-icon-size: 1.25em;
+@controlbar-icon-size: 1em;
 @progress-color: @active-color;
 @rail-color: #666;
 @rail-glow: inset 0 3px 10px 1px rgba(51,51,51,0.85);
