--- a/assets/less/jwplayer.less
+++ b/assets/less/jwplayer.less
@@ -14,15 +14,11 @@
 	border: 0;
 }
 
-.jwplayer .jw-controlbar .jw-icon button {
-	font-size: @controlbar-icon-size;
-}
-
-.jwplayer .jw-icon button:hover {
+.jwplayer .jw-controls .jw-icon button {
 	color: @active-color;
 }
 
-.jwplayer .jw-icon.tooltip-icon.open button {
+.jwplayer .tooltip-icon.open button, .jwplayer .jw-icon button:hover {
 	color: @active-color;
 }
 
@@ -73,7 +69,7 @@ list-style:none;
 	pointer-events:none;
 }
 
-.jwplayer.jw-user-inactive .jwcontrols {
+.jwplayer.jw-user-inactive .jw-controls {
 	pointer-events:all;
 }
 
@@ -122,8 +118,8 @@ display:none;
 	background-color:rgb(255,255,255)!important;
 	border:1px solid rgb(188,188,188)!important;
 	border-radius:5px!important;
-	-webkit-box-shadow:rgba(0,0,0,0.0980392) 5px 5px 7px rgba(255,255,255,0.298039) 0 1px 0 inset!important;
-	box-shadow:rgba(0,0,0,0.0980392) 5px 5px 7px rgba(255,255,255,0.298039) 0 1px 0 inset!important;
+	-webkit-box-shadow:rgba(0,0,0,0.1) 5px 5px 7px rgba(255,255,255,0.3) 0 1px 0 inset!important;
+	box-shadow:rgba(0,0,0,0.1) 5px 5px 7px rgba(255,255,255,0.3) 0 1px 0 inset!important;
 }
 
 .jw-click div {
